--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <section id="projects" class="projects">
       <h2>My Projects</h2>
       <div class="projects-grid">
-        <div class="project-card"> <img src="placeholder-image.jpg" alt="Project 1">
-          <h3>Project Title 1</h3>
-          <p>Brief description of Project 1.</p>
+        <div class="project-card"> <img src="project placeholder.jpg" alt="Project 1">
+          <h3>To be uploaded soon...</h3>
+          <p>123456789</p>
           <div class="project-links">
             <a href="#" target="_blank">Live Demo</a>
             <a href="#" target="_blank">GitHub</a>
