--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <section id="projects" class="projects">
       <h2>My Projects</h2>
       <div class="projects-grid">
-        <div class="project-card"> <img src="project placeholder.jpg" alt="Project 1">
+        <div class="project-card"> <img src="placeholder.jpg" alt="Project 1">
           <h3>To be uploaded soon...</h3>
-          <p>123456789</p>
+          <p>#1</p>
           <div class="project-links">
             <a href="#" target="_blank">Live Demo</a>
             <a href="#" target="_blank">GitHub</a>
@@ -58,7 +58,7 @@
       <p>I'm always open to new opportunities and collaborations. Feel free to reach out to me!</p>
       <ul>
         <li><a href="mailto:adekunle.adedeji333@gmail.com">Email</a></li>
-        <li><a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
+        <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
         <li><a href="https://github.com/adecunle-ai" target="_blank">GitHub</a></li>
       </ul>
     </section>
