--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
   <head>
-    <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/> <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Adekunle Adedeji - Frontend Developer Portfolio</title> 
     <link rel="stylesheet" href="style.css">
   </head>
@@ -42,7 +42,7 @@
     <section id="projects" class="projects">
       <h2>My Projects</h2>
       <div class="projects-grid">
-        <div class="project-card"> <img src="placeholder.jpg" alt="Project 1">
+        <div class="project-card"> <img src="placeholder.jpg" alt="Project 1"/>
           <h3>To be uploaded soon...</h3>
           <p>#1</p>
           <div class="project-links">
