--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
     <section id="projects" class="projects">
       <h2>My Projects</h2>
       <div class="projects-grid">
-        <div class="project-card"> <img src="placeholder.jpg" alt="Project 1"/>
-          <h3>To be uploaded soon...</h3>
+        <div class="project-card"> <img src="12MEALS LOGO.jpg" alt="Project 1"/>
           <p>#1</p>
-          <div class="project-links">
-            <a href="#" target="_blank">Live Demo</a>
-            <a href="#" target="_blank">GitHub</a>
+          <div class="project-card">
+            <h3>12Meals Restaurant & Bar Website</h3>
+            <p>This website showcases an engaging restaurant and bar experience with menu highlights, events, and a contact/reservation section. Built using HTML, CSS, and JavaScript.</p>
+            <div class="project-links">
+              <a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">Visit Website</a>
+              <a href="https://github.com/yourusername/12meals-website" target="_blank">View Code</a>
+            </div>
           </div>
         </div>
       </div>
