--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="project-card"> <img src="12MEALS LOGO.jpg" alt="Project 1"/>
           <p>#1</p>
           <div class="project-card">
-            <h3>12Meals Restaurant & Bar Website</h3>
+            <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">12Meals Restaurants & Bar Website</a></h3>
             <p>This website showcases an engaging restaurant and bar experience with menu highlights, events, and a contact/reservation section. Built using HTML, CSS, and JavaScript.</p>
             <div class="project-links">
               <a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">Visit Website</a>
