--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>#1</p>
           <div class="project-card">
             <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">12Meals Restaurants & Bar Website</a></h3>
-            <p>This website showcases an engaging restaurant and bar experience with menu highlights, events, and a contact/reservation section. Built using HTML, CSS, and JavaScript.</p>
+            <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a project deployed via github pages to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
             <div class="project-links">
               <a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">Visit Website</a>
               <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">View Code</a>
