--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">12Meals Restaurants & Bar Website</a></h3>
             <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a project deployed via github pages to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
             <div class="project-links">
-              <a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">Visit Website</a>
+              <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">Visit Website</a>
               <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">View Code</a>
             </div>
           </div>
