--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     <section id="projects" class="projects">
       <h2>My Projects</h2>
       <div class="projects-grid">
-        <div class="project-card"> <img src="12MEALS LOGO.jpg" alt="Project 1"/>
+        <div class="project-card"> 
           <p>#1</p>
           <div class="project-card">
+            <img src="12MEALS LOGO.jpg" alt="Project 1"/>
             <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">12Meals Restaurants & Bar Website</a></h3>
             <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a project deployed via github pages to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
             <div class="project-links">
