--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="project-card">
             <img src="12MEALS LOGO.jpg" alt="Project 1"/>
             <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/#reservation" target="_blank">12Meals Restaurants & Bar Website</a></h3>
-            <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a project deployed via github pages to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
+            <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a simple project deployed via github to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
             <div class="project-links">
               <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">Visit Website</a>
               <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">View Code</a>
