--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     
     <section id="hero" class="hero">
       <div class="hero-content">
-        <h1>Hi, I'm Adekunle Adedeji</h1>
+        <h1>Hi, I am Adekunle Adedeji</h1>
         <p>A passionate frontend developer eager to build amazing web experiences.</p>
         <a href="#projects" class="button">View My Projects</a>
       </div>
     </section>
     
     <section id="about" class="about"> <h2>About Me</h2>
-      <p>Hi there! I'm Adekunle Adedeji, a frontend developer with a passion for creating user-friendly and visually appealing web experiences. I have a strong foundation in HTML, CSS, and JavaScript, and I'm currently expanding my skillset with React.js. My journey into web development is driven by a fascination with coding and its potential to communicate with computers in powerful and intuitive ways. I'm eager to apply and expand my skills in a professional frontend development environment and continue to grow as a developer.</p>
+      <p>A frontend developer with a passion for creating user-friendly and visually appealing web experiences. I have a strong foundation in HTML, CSS, and JavaScript, and I'm currently expanding my skillset with React.js. My journey into web development is driven by a fascination with coding and its potential to communicate with computers in powerful and intuitive ways. I'm eager to apply and expand my skills in a professional frontend development environment and continue to grow as a developer.</p>
       <div class="skills">
         <h3>Skills</h3>
         <ul>
