--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p>I'm always open to new opportunities and collaborations. Feel free to reach out to me!</p>
       <ul>
         <li><a href="mailto:adekunle.adedeji333@gmail.com">Email</a></li>
-        <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
+        <li><a href="https://linkedin.com/in/adedeji-adekunle-adeniyi" target="_blank">LinkedIn</a></li>
         <li><a href="https://github.com/adecunle-ai" target="_blank">GitHub</a></li>
       </ul>
     </section>
