--- a/index.html
+++ b/index.html
@@ -54,12 +54,25 @@
             </div>
           </div>
         </div>
+
+         <div class="project-card"> 
+          <p>#2</p>
+          <div class="project-card">
+            <img src="expense tracker.jpg" alt="Project 2"/>
+            <h3><a href="https://adecunle-ai.github.io/12meals-restaurant-bar/" target="_blank">Expense Tracker App</a></h3>
+            <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a simple project deployed via github to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
+            <div class="project-links">
+              <a href="https://adecunle-ai.github.io/12meals-restaurant-bar/" target="_blank">Visit Website</a>
+              <a href="https://github.com/Adecunle-AI/12meals-restaurant-bar" target="_blank">View Code</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     
     <section id="contact" class="contact">
       <h2>Contact me</h2>
-      <p>I'm always open to new opportunities and collaborations. Feel free to reach out to me!</p>
+      <p>I'm always open to new opportunities and collaborations. Feel free to contact me!</p>
       <ul>
         <li><a href="mailto:adekunle.adedeji333@gmail.com">Email</a></li>
         <li><a href="https://linkedin.com/in/adedeji-adekunle-adeniyi" target="_blank">LinkedIn</a></li>
