--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="project-card">
             <img src="expense tracker.jpg" alt="Project 2"/>
             <h3><a href="https://adecunle-ai.github.io/expense-tracker/" target="_blank">Expense Tracker App</a></h3>
-            <p>This is a stylish and responsive site designed for 12meals restaurants and bar. This is a simple project deployed via github to exemplify my understaning and skill to build with HTML, CSS, and JavaScript </p>
+            <p>An expense tracking web app built using HTML, CSS, and focused more on JavaScript skills. This app adds expenses automatically, and displays a running list of transactions.</p>
             <div class="project-links">
               <a href="https://adecunle-ai.github.io/expense-tracker/" target="_blank">Visit Website</a>
               <a href="https://github.com/Adecunle-AI/expense-tracker" target="_blank">View Code</a>
